Before removing Diffie-Hellman from SSL/TLS classes. Working with useMASs = false, and useSignature = false.